@@ -56,9 +56,11 @@ export NETDATA_PKG_NAME="netdata-${NETDATA_VERSION}.gz.run"
 export NETDATA_CONF_HEALTH_ALARM_NOTIFY="${NETDATA_CONF_DIR}/health_alarm_notify.conf"
 
 # Plugin config files.
-export NETDATA_CONF_PLUGIN_MYSQL="${NETDATA_CONF_DIR}/python.d/mysql.conf"
-export NETDATA_CONF_PLUGIN_PGSQL="${NETDATA_CONF_DIR}/python.d/postgres.conf"
-export NETDATA_CONF_PLUGIN_PHPFPM="${NETDATA_CONF_DIR}/python.d/phpfpm.conf"
+export NETDATA_CONF_PLUGIN_DIR="${NETDATA_CONF_DIR}/python.d"
+export NETDATA_CONF_PLUGIN_MYSQL="${NETDATA_CONF_PLUGIN_DIR}/mysql.conf"
+export NETDATA_CONF_PLUGIN_PGSQL="${NETDATA_CONF_PLUGIN_DIR}/postgres.conf"
+export NETDATA_CONF_PLUGIN_PHPFPM="${NETDATA_CONF_PLUGIN_DIR}/phpfpm.conf"
+export NETDATA_CONF_PLUGIN_OPENLDAP="${NETDATA_CONF_PLUGIN_DIR}/openldap.conf"
 
 if [ X"${KERNEL_NAME}" == X'FREEBSD' ]; then
     export NETDATA_CONF_DIR="/usr/local/etc/netdata"
