@@ -1,0 +1,8 @@
+update_every: 5
+
+local:
+    username : "PH_LDAP_BINDDN"   # The bind user with right to access monitor statistics
+    password : "PH_LDAP_BINDPW"   # The password for the binded user
+    server   : 'localhost'                    # The listening address of the LDAP server
+    port     : 389                            # The listening port of the LDAP server
+    timeout  : 1
