@@ -26,6 +26,7 @@ argsfile    PH_OPENLDAP_ARGS_FILE
 
 #modulepath  PH_OPENLDAP_MODULE_PATH
 #moduleload  back_PH_OPENLDAP_DEFAULT_DBTYPE
+#moduleload  back_monitor
 
 # Support password verification with SSHA512. Require OpenLDAP-2.4.32 or later.
 #moduleload  pw_sha2
@@ -157,10 +158,11 @@ access to *
 #######################################################################
 # Databases
 #######################################################################
-#database monitor
-#access to *
-#    by dn.exact="PH_LDAP_ROOTDN"
-#    by * none
+database monitor
+access to *
+    by dn.exact="PH_LDAP_ROOTDN" read
+    by dn.exact="PH_LDAP_BINDDN" read
+    by * none
 
 # Database used to store mail accounts
 database    PH_OPENLDAP_DEFAULT_DBTYPE
