@@ -6,6 +6,7 @@ iRedMail-0.9.9:
           NOT RECOMMENDED FOR PRODUCTION SERVER.
 
     * Improvements:
+        + netdata is able to monitor OpenLDAP.
         + SOGo now supports resource management with OpenLDAP backend.
         + Add rc script and rules for ip6tables on Debian/Ubuntu.
         + iRedAdmin is now running as a standalone uwsgi instance (service
